--- a/trunk/Molecule/Molecule.csproj
+++ b/trunk/Molecule/Molecule.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5328FC2C-EB3D-48A2-AC5D-4CD4C9DC569E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -98,6 +98,7 @@
     <Compile Include="ArrayExtensions.cs" />
     <Compile Include="Atome\AtomeProviderBase.cs" />
     <Compile Include="Atome\IProvider.cs" />
+    <Compile Include="Webdav\IVirtualWebdavFolder.cs" />
     <Compile Include="Atome\ProviderException.cs" />
     <Compile Include="Atome\ProviderInfo.cs" />
     <Compile Include="Collections\CollectionExtensions.cs" />
@@ -127,6 +128,8 @@
     <Compile Include="Security\CryptoUtil.cs" />
     <Compile Include="Serialization\Atome.cs" />
     <Compile Include="Services.cs" />
+    <Compile Include="Webdav\VirtualWebdavFolderService.cs" />
+    <Compile Include="Webdav\WebdavFileInfo.cs" />
     <Compile Include="Web\CssVariablesExtender.cs" />
     <Compile Include="Web\Security\SQLiteMembershipProvider.cs" />
     <Compile Include="Web\Security\SQLiteRoleProvider.cs" />
