--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -222,9 +222,11 @@
     <Compile Include="Views\Shared\ProviderSelector.ascx.cs">
       <DependentUpon>ProviderSelector.ascx</DependentUpon>
     </Compile>
+    <Compile Include="WebdavInternal\WebdavUploadFileActionResult.cs" />
     <Compile Include="WebdavInternal\HttpMethods\GetMethod.cs" />
     <Compile Include="WebdavInternal\HttpMethods\OptionMethod.cs" />
     <Compile Include="WebdavInternal\HttpMethods\PropFindMethod.cs" />
+    <Compile Include="WebdavInternal\WebdavActionResult.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="atomes\admin\Views\Setup\CreateAdmin.aspx" />
