--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -99,32 +99,34 @@
 	</system.codedom> 
 	<system.web.extensions/>
   <log4net>
-    <appender name="AspNetTraceAppender" type="log4net.Appender.AspNetTraceAppender" >
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
-      </layout>
-    </appender>
-    <appender name="OutputDebugStringAppender" type="log4net.Appender.OutputDebugStringAppender" >
-      <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
-      </layout>
-    </appender>
-    <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
-      <file value="log.txt" />
+    <appender name="RollingLogFileAppender"
+       type="log4net.Appender.RollingFileAppender">
+      <file type="log4net.Util.PatternString" value="logs/molecule-%property{currentuser}.txt" />
       <appendToFile value="true" />
-      <rollingStyle value="Composite" />
       <datePattern value="yyyyMMdd" />
-      <maxSizeRollBackups value="10" />
-      <maximumFileSize value="1MB" />
+      <rollingStyle value="Date" />
+      <filter type="log4net.Filter.LevelRangeFilter">
+        <acceptOnMatch value="true" />
+        <levelMin value="INFO" />
+        <levelMax value="FATAL" />
+      </filter>
       <layout type="log4net.Layout.PatternLayout">
-        <conversionPattern value="%date [%thread] %-5level %logger [%property{NDC}] - %message%newline" />
+        <conversionPattern
+        value="%date %-5level %logger - %message%newline" />
       </layout>
     </appender>
+
+    <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
+      <layout type="log4net.Layout.PatternLayout">
+        <conversionPattern value="%date %-5level %logger - %message%newline" />
+      </layout>
+    </appender>
+
     <root>
-      <level value="DEBUG" />
-      <appender-ref ref="AspNetTraceAppender" />
-      <appender-ref ref="OutputDebugStringAppender" />
+      <!-- OFF, FATAL, ERROR, WARN, DEBUG, INFO, ALL -->
+      <level value="ALL" />
       <appender-ref ref="RollingLogFileAppender" />
+      <appender-ref ref="ConsoleAppender" />
     </root>
   </log4net>
 
