--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -232,6 +232,7 @@
     <Content Include="atomes\admin\Views\Setup\CreateAdmin.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\jquery.history.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.3.2.js" />
     <Content Include="Scripts\jquery-1.3.2.min.js" />
