* Molecule.sln: * Molecule/Atome/AtomeProviderBase.cs: * WebMusic/WebMusic.Providers/Base/Album.cs: * WebMusic/WebMusic.Providers/Base/Artist.cs: * Molecule.MvcWebSite/Themes/bloup/molecule.css: * Molecule.MvcWebSite/Molecule.MvcWebSite.csproj: * Molecule.MvcWebSite/atomes/music/style/layout.css: * Molecule.MvcWebSite/atomes/music/scripts/default.js: * WebMusic/WebMusic.Providers.Banshee/BansheeProvider.cs: * Molecule.MvcWebSite/atomes/music/Views/Player/Index.aspx: * Molecule.MvcWebSite/WebdavInternal/WebdavUploadFileResult.cs: * Molecule.MvcWebSite/atomes/music/Controllers/PlayerController.cs: * WebMusic/WebMusic.Providers.Banshee/WebMusic.Providers.Banshee.csproj: * WebMusic/WebMusic.Providers.Rhythmbox/WebMusic.Providers.Rhythmbox.csproj:

--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -1,5 +1,5 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="3.5" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
@@ -400,6 +400,11 @@
     <MonoDevelop>
       <Properties VerifyCodeBehindFields="true" VerifyCodeBehindEvents="true">
         <XspParameters Port="8080" Address="127.0.0.1" SslMode="None" SslProtocol="Default" KeyType="None" CertFile="" KeyFile="" PasswordOptions="None" Password="" Verbose="true" />
+        <WebDeployTargets>
+          <Target Name="test">
+            <FileCopier Handler="MonoDevelop.Deployment.LocalFileCopyHandler" TargetDirectory="/home/timaniac/www/test" ctype="LocalFileCopyConfiguration" />
+          </Target>
+        </WebDeployTargets>
       </Properties>
     </MonoDevelop>
   </ProjectExtensions>
