--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -98,11 +98,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="App_GlobalResources\Common.designer.cs">
-      <DependentUpon>Common.resx</DependentUpon>
-    </Compile>
-    <Compile Include="App_GlobalResources\Common.fr.designer.cs">
+    <Compile Include="App_GlobalResources\Common.fr2.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
       <DependentUpon>Common.fr.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\Common2.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Common.resx</DependentUpon>
     </Compile>
     <Compile Include="App_GlobalResources\molecule.fr.designer.cs">
       <DependentUpon>molecule.fr.resx</DependentUpon>
@@ -115,6 +119,16 @@
     </Compile>
     <Compile Include="App_GlobalResources\photo.fr.designer.cs">
       <DependentUpon>photo.fr.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\photo.fr2.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>photo.fr.resx</DependentUpon>
+    </Compile>
+    <Compile Include="App_GlobalResources\photo2.designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>photo.resx</DependentUpon>
     </Compile>
     <Compile Include="App_GlobalResources\webmusic.fr1.designer.cs">
       <DependentUpon>webmusic.fr.resx</DependentUpon>
@@ -246,6 +260,7 @@
     <Content Include="App_GlobalResources\Common.fr.resx">
       <SubType>Designer</SubType>
       <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>Common.fr2.designer.cs</LastGenOutput>
     </Content>
     <Content Include="App_GlobalResources\webmusic.resx">
       <SubType>Designer</SubType>
@@ -254,6 +269,7 @@
     <Content Include="App_GlobalResources\Common.resx">
       <SubType>Designer</SubType>
       <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>Common2.designer.cs</LastGenOutput>
     </Content>
     <Content Include="App_GlobalResources\molecule.fr.resx">
       <SubType>Designer</SubType>
@@ -266,10 +282,12 @@
     <Content Include="App_GlobalResources\photo.fr.resx">
       <SubType>Designer</SubType>
       <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>photo.fr2.designer.cs</LastGenOutput>
     </Content>
     <Content Include="App_GlobalResources\photo.resx">
       <SubType>Designer</SubType>
       <Generator>GlobalResourceProxyGenerator</Generator>
+      <LastGenOutput>photo2.designer.cs</LastGenOutput>
     </Content>
     <Content Include="App_GlobalResources\webmusic.fr.resx">
       <SubType>Designer</SubType>
