--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -137,6 +137,14 @@
     <Compile Include="atomes\admin\Controllers\PreferencesController.cs" />
     <Compile Include="atomes\admin\Controllers\SetupController.cs" />
     <Compile Include="atomes\admin\Data\PreferencesData.cs" />
+    <Compile Include="atomes\documents\DocumentInfo.cs" />
+    <Compile Include="atomes\documents\Atome.cs" />
+    <Compile Include="atomes\documents\Controllers\DefaultController.cs" />
+    <Compile Include="atomes\documents\Controllers\PreferencesController.cs" />
+    <Compile Include="atomes\documents\FolderInfo.cs" />
+    <Compile Include="atomes\documents\AGenericInfo.cs" />
+    <Compile Include="atomes\documents\Interfaces.cs" />
+    <Compile Include="atomes\documents\Service.cs" />
     <Compile Include="atomes\template\Atome.cs" />
     <Compile Include="atomes\music\Atome.cs" />
     <Compile Include="atomes\music\Controllers\AdminController.cs" />
@@ -234,6 +242,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="atomes\admin\Views\Setup\CreateAdmin.aspx" />
+    <Content Include="atomes\documents\Atome.xml" />
+    <Content Include="atomes\documents\Views\Default\Index.aspx" />
+    <Content Include="atomes\documents\Views\Preferences\Index.aspx" />
     <Content Include="atomes\template\Atome.xml" />
     <Content Include="atomes\template\README.txt" />
     <Content Include="atomes\template\Views\Default\Index.aspx" />
@@ -377,6 +388,7 @@
     <None Include="Themes\bloup\images\molecule-6-rot.svg" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="atomes\documents\Data\" />
     <Folder Include="atomes\template\Data\" />
     <Folder Include="logs\" />
   </ItemGroup>
