--- a/trunk/Molecule/Molecule.csproj
+++ b/trunk/Molecule/Molecule.csproj
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.21022</ProductVersion>
+    <ProductVersion>9.0.30729</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{5328FC2C-EB3D-48A2-AC5D-4CD4C9DC569E}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -98,6 +98,7 @@
     <Compile Include="ArrayExtensions.cs" />
     <Compile Include="Atome\AtomeProviderBase.cs" />
     <Compile Include="Atome\IProvider.cs" />
+    <Compile Include="StringExtensions.cs" />
     <Compile Include="Webdav\IVirtualWebdavFolder.cs" />
     <Compile Include="Atome\ProviderException.cs" />
     <Compile Include="Atome\ProviderInfo.cs" />
@@ -159,8 +160,5 @@
       <SubType>Designer</SubType>
       <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="GConf\" />
   </ItemGroup>
 </Project>
