--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -254,7 +254,6 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery.history.js" />
-    <Content Include="Scripts\jquery.MultiFile.pack.js" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.3.2.js" />
     <Content Include="Scripts\jquery-1.3.2.min.js" />
@@ -390,6 +389,7 @@
     <Content Include="atomes\documents\Views\Web.config" />
     <Content Include="atomes\music\Views\Download\Files.aspx" />
     <Content Include="atomes\template\Views\Web.config" />
+    <Content Include="Scripts\ajaxupload.js" />
     <None Include="Themes\bloup\images\molecule-6-rot.svg" />
   </ItemGroup>
   <ItemGroup>
