--- a/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
+++ b/trunk/Molecule.MvcWebSite/Molecule.MvcWebSite.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="3.5">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -245,6 +245,27 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery.history.js" />
+    <Content Include="Themes\bloup\images\mimetypes\application-certificate.png" />
+    <Content Include="Themes\bloup\images\mimetypes\application-x-executable.png" />
+    <Content Include="Themes\bloup\images\mimetypes\audio-x-generic.png" />
+    <Content Include="Themes\bloup\images\mimetypes\font-x-generic.png" />
+    <Content Include="Themes\bloup\images\mimetypes\image-x-generic.png" />
+    <Content Include="Themes\bloup\images\mimetypes\package-x-generic.png" />
+    <Content Include="Themes\bloup\images\mimetypes\text-html.png" />
+    <Content Include="Themes\bloup\images\mimetypes\text-x-generic-template.png" />
+    <Content Include="Themes\bloup\images\mimetypes\text-x-generic.png" />
+    <Content Include="Themes\bloup\images\mimetypes\text-x-script.png" />
+    <Content Include="Themes\bloup\images\mimetypes\video-x-generic.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-address-book.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-calendar.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-document-template.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-document.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-drawing-template.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-drawing.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-presentation-template.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-presentation.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-spreadsheet-template.png" />
+    <Content Include="Themes\bloup\images\mimetypes\x-office-spreadsheet.png" />
     <Content Include="Web.config" />
     <Content Include="Scripts\jquery-1.3.2.js" />
     <Content Include="Scripts\jquery-1.3.2.min.js" />
