--- a/trunk/Molecule.MvcWebSite/Web.config
+++ b/trunk/Molecule.MvcWebSite/Web.config
@@ -18,7 +18,7 @@
     <section  name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net"/>
   </configSections>
   <appSettings>
-    <add key="theme" value="bloup"/>
+    <add key="theme" value="bikbik"/>
   </appSettings>
 	<system.web>
     <customErrors mode="Off"/>
